--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "lint": "eslint **/*.js",
     "lint:fix": "eslint --fix **/*.js",
-    "hw2": "nodemon routes-hw2/api/contacts.js"
+    "hw2": "nodemon routes/api/contacts.js"
   },
   "dependencies": {
     "cors": "2.8.5",
