--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "4.1",
     "mongoose": "^7.5.0",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "uuid": "^9.0.0"
