--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "cors": "2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.10",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "4.1",
     "mongoose": "^7.5.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.1",
     "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "path": "^0.12.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
